src/com/compilador/analizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : ID bloqueDeclarativo bloqueEjecutable

   2  bloqueDeclarativo : bloqueDeclarativo sentenciasDeclarativas
   3                    | sentenciasDeclarativas

   4  bloqueEjecutable : bloqueTRYCATCH
   5                   | bloqueEjecutableNormal

   6  bloqueTRYCATCH : TRY sentEjecutables CATCH BEGIN sentSoloEjecutables END
   7                 | sentEjecutables CATCH BEGIN sentSoloEjecutables END
   8                 | TRY CATCH BEGIN sentSoloEjecutables END
   9                 | TRY sentEjecutables BEGIN sentSoloEjecutables END
  10                 | TRY sentEjecutables CATCH sentSoloEjecutables END
  11                 | TRY sentEjecutables CATCH BEGIN sentSoloEjecutables error

  12  bloqueEjecutableNormal : BEGIN sentSoloEjecutables END
  13                         | sentSoloEjecutables END
  14                         | BEGIN sentSoloEjecutables error

  15  bloqueEjecutableFunc : BEGIN sentEjecutableFunc RETURN '(' retorno ')' END
  16                       | sentEjecutableFunc RETURN '(' retorno ')' END
  17                       | BEGIN sentEjecutableFunc '(' retorno ')' END
  18                       | BEGIN sentEjecutableFunc RETURN retorno ')' END
  19                       | BEGIN sentEjecutableFunc RETURN '(' ')' END
  20                       | BEGIN sentEjecutableFunc RETURN '(' retorno END

  21  sentEjecutableFunc : sentEjecutableFunc sentEjecutables
  22                     | sentEjecutableFunc sentenciaCONTRACT
  23                     | sentEjecutables

  24  sentenciaCONTRACT : CONTRACT ':' '(' condicion ')' ';'
  25                    | CONTRACT '(' condicion ')' ';'
  26                    | CONTRACT ':' condicion ')' ';'
  27                    | CONTRACT ':' '(' ')' ';'
  28                    | CONTRACT ':' '(' condicion ';'
  29                    | CONTRACT ':' '(' condicion ')' error

  30  sentSoloEjecutables : sentSoloEjecutables sentEjecutables
  31                      | sentEjecutables

  32  sentenciasDeclarativas : declaraVariable
  33                         | declaraFunc
  34                         | declaraVarFunc

  35  declaraVariable : tipo listaVariables ';'
  36                  | listaVariables ';'
  37                  | tipo listaVariables error

  38  declaraFunc : declaracionFunc bloqueDeclarativo bloqueEjecutableFunc
  39              | declaracionFunc bloqueEjecutableFunc

  40  declaraVarFunc : encabezadoFunc listaVariables ';'
  41                 | encabezadoFunc ';'
  42                 | encabezadoFunc listaVariables error

  43  encabezadoFunc : tipo FUNC '(' tipo ')'
  44                 | FUNC '(' tipo ')'
  45                 | tipo FUNC tipo ')'
  46                 | tipo FUNC '(' ')'
  47                 | tipo FUNC '(' tipo error

  48  retorno : expAritmetica
  49          | tipo '(' expAritmetica ')'

  50  expAritmetica : expAritmetica '+' termino
  51                | expAritmetica '-' termino
  52                | termino

  53  termino : termino '*' factor
  54          | termino '/' factor
  55          | factor

  56  factor : ID
  57         | CTE
  58         | '-' CTE
  59         | llamadoFunc

  60  llamadoFunc : ID '(' parametro ')'
  61              | ID '(' ')'

  62  declaracionFunc : tipo FUNC ID '(' parametro ')'
  63                  | tipo FUNC ID '(' ')'
  64                  | FUNC ID '(' parametro ')'
  65                  | tipo ID '(' parametro ')'
  66                  | tipo FUNC ID parametro ')'
  67                  | tipo FUNC ID '(' parametro error

  68  parametro : tipo ID
  69            | ID

  70  sentEjecutables : asignacion
  71                  | sentenciaIF
  72                  | sentenciaPRINT
  73                  | sentenciaWHILE

  74  asignacion : ID ASIGN expAritmetica ';'
  75             | ID ASIGN tipo '(' expAritmetica ')' ';'
  76             | ASIGN expAritmetica ';'
  77             | ID expAritmetica ';'
  78             | ID ASIGN expAritmetica error

  79  sentenciaIF : IF condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
  80              | IF condicion THEN bloqueEjecutable ENDIF ';'
  81              | condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
  82              | IF THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
  83              | IF condicion bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
  84              | IF condicion THEN ELSE bloqueEjecutable ENDIF ';'
  85              | IF condicion THEN bloqueEjecutable ELSE ENDIF ';'
  86              | IF condicion THEN bloqueEjecutable ELSE bloqueEjecutable ';'
  87              | IF condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF error
  88              | IF THEN bloqueEjecutable ENDIF ';'
  89              | IF condicion bloqueEjecutable ENDIF ';'
  90              | IF condicion THEN ENDIF ';'
  91              | IF condicion THEN bloqueEjecutable ';'
  92              | IF condicion THEN bloqueEjecutable ENDIF error

  93  sentenciaPRINT : PRINT '(' CADENA ')' ';'
  94                 | '(' CADENA ')' ';'
  95                 | PRINT CADENA ')' ';'
  96                 | PRINT '(' ')' ';'
  97                 | PRINT '(' CADENA ';'
  98                 | PRINT '(' CADENA ')' error
  99                 | PRINT '(' ID ')' ';'
 100                 | PRINT '(' CTE ')' ';'

 101  sentenciaWHILE : WHILE condicion DO bloqueEjecutable
 102                 | condicion DO bloqueEjecutable
 103                 | WHILE DO bloqueEjecutable
 104                 | WHILE condicion bloqueEjecutable
 105                 | WHILE condicion DO error

 106  condicion : '(' comparaciones ')'

 107  comparaciones : comparaciones opLogico comparacion
 108                | comparacion
 109                | comparaciones opLogico error

 110  comparacion : expAritmetica comparador expAritmetica
 111              | tipo '(' expAritmetica ')' comparador expAritmetica
 112              | expAritmetica comparador tipo '(' expAritmetica ')'
 113              | tipo '(' expAritmetica ')' comparador tipo '(' expAritmetica ')'
 114              | expAritmetica comparador error
 115              | comparador expAritmetica

 116  comparador : '>'
 117             | '<'
 118             | IGUAL
 119             | DISTINTO
 120             | MAYORIG
 121             | MENORIG

 122  opLogico : AND
 123           | OR

 124  tipo : LONG
 125       | SINGLE

 126  listaVariables : listaVariables ',' ID
 127                 | ID
 128                 | listaVariables ','

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . bloqueDeclarativo bloqueEjecutable  (1)

	FUNC  shift 3
	LONG  shift 4
	SINGLE  shift 5
	ID  shift 6
	.  error

	bloqueDeclarativo  goto 7
	sentenciasDeclarativas  goto 8
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	encabezadoFunc : FUNC . '(' tipo ')'  (44)
	declaracionFunc : FUNC . ID '(' parametro ')'  (64)

	ID  shift 16
	'('  shift 17
	.  error


state 4
	tipo : LONG .  (124)

	.  reduce 124


state 5
	tipo : SINGLE .  (125)

	.  reduce 125


state 6
	listaVariables : ID .  (127)

	.  reduce 127


state 7
	programa : ID bloqueDeclarativo . bloqueEjecutable  (1)
	bloqueDeclarativo : bloqueDeclarativo . sentenciasDeclarativas  (2)

	PRINT  shift 18
	FUNC  shift 3
	WHILE  shift 19
	LONG  shift 4
	BEGIN  shift 20
	SINGLE  shift 5
	ID  shift 21
	TRY  shift 22
	IF  shift 23
	ASIGN  shift 24
	'('  shift 25
	.  error

	bloqueEjecutable  goto 26
	sentenciasDeclarativas  goto 27
	bloqueTRYCATCH  goto 28
	bloqueEjecutableNormal  goto 29
	sentEjecutables  goto 30
	sentSoloEjecutables  goto 31
	condicion  goto 32
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15
	asignacion  goto 33
	sentenciaIF  goto 34
	sentenciaPRINT  goto 35
	sentenciaWHILE  goto 36


state 8
	bloqueDeclarativo : sentenciasDeclarativas .  (3)

	.  reduce 3


state 9
	sentenciasDeclarativas : declaraVariable .  (32)

	.  reduce 32


state 10
	sentenciasDeclarativas : declaraFunc .  (33)

	.  reduce 33


state 11
	sentenciasDeclarativas : declaraVarFunc .  (34)

	.  reduce 34


state 12
	declaraVariable : tipo . listaVariables ';'  (35)
	declaraVariable : tipo . listaVariables error  (37)
	encabezadoFunc : tipo . FUNC '(' tipo ')'  (43)
	encabezadoFunc : tipo . FUNC tipo ')'  (45)
	encabezadoFunc : tipo . FUNC '(' ')'  (46)
	encabezadoFunc : tipo . FUNC '(' tipo error  (47)
	declaracionFunc : tipo . FUNC ID '(' parametro ')'  (62)
	declaracionFunc : tipo . FUNC ID '(' ')'  (63)
	declaracionFunc : tipo . ID '(' parametro ')'  (65)
	declaracionFunc : tipo . FUNC ID parametro ')'  (66)
	declaracionFunc : tipo . FUNC ID '(' parametro error  (67)

	FUNC  shift 37
	ID  shift 38
	.  error

	listaVariables  goto 39


state 13
	declaraVariable : listaVariables . ';'  (36)
	listaVariables : listaVariables . ',' ID  (126)
	listaVariables : listaVariables . ','  (128)

	';'  shift 40
	','  shift 41
	.  error


state 14
	declaraFunc : declaracionFunc . bloqueDeclarativo bloqueEjecutableFunc  (38)
	declaraFunc : declaracionFunc . bloqueEjecutableFunc  (39)

	PRINT  shift 18
	FUNC  shift 3
	WHILE  shift 19
	LONG  shift 4
	BEGIN  shift 42
	SINGLE  shift 5
	ID  shift 21
	IF  shift 23
	ASIGN  shift 24
	'('  shift 25
	.  error

	bloqueDeclarativo  goto 43
	sentenciasDeclarativas  goto 8
	sentEjecutables  goto 44
	bloqueEjecutableFunc  goto 45
	sentEjecutableFunc  goto 46
	condicion  goto 32
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15
	asignacion  goto 33
	sentenciaIF  goto 34
	sentenciaPRINT  goto 35
	sentenciaWHILE  goto 36


state 15
	declaraVarFunc : encabezadoFunc . listaVariables ';'  (40)
	declaraVarFunc : encabezadoFunc . ';'  (41)
	declaraVarFunc : encabezadoFunc . listaVariables error  (42)

	ID  shift 6
	';'  shift 47
	.  error

	listaVariables  goto 48


state 16
	declaracionFunc : FUNC ID . '(' parametro ')'  (64)

	'('  shift 49
	.  error


state 17
	encabezadoFunc : FUNC '(' . tipo ')'  (44)

	LONG  shift 4
	SINGLE  shift 5
	.  error

	tipo  goto 50


state 18
	sentenciaPRINT : PRINT . '(' CADENA ')' ';'  (93)
	sentenciaPRINT : PRINT . CADENA ')' ';'  (95)
	sentenciaPRINT : PRINT . '(' ')' ';'  (96)
	sentenciaPRINT : PRINT . '(' CADENA ';'  (97)
	sentenciaPRINT : PRINT . '(' CADENA ')' error  (98)
	sentenciaPRINT : PRINT . '(' ID ')' ';'  (99)
	sentenciaPRINT : PRINT . '(' CTE ')' ';'  (100)

	CADENA  shift 51
	'('  shift 52
	.  error


state 19
	sentenciaWHILE : WHILE . condicion DO bloqueEjecutable  (101)
	sentenciaWHILE : WHILE . DO bloqueEjecutable  (103)
	sentenciaWHILE : WHILE . condicion bloqueEjecutable  (104)
	sentenciaWHILE : WHILE . condicion DO error  (105)

	DO  shift 53
	'('  shift 54
	.  error

	condicion  goto 55


state 20
	bloqueEjecutableNormal : BEGIN . sentSoloEjecutables END  (12)
	bloqueEjecutableNormal : BEGIN . sentSoloEjecutables error  (14)

	PRINT  shift 18
	WHILE  shift 19
	ID  shift 56
	IF  shift 23
	ASIGN  shift 24
	'('  shift 25
	.  error

	sentEjecutables  goto 57
	sentSoloEjecutables  goto 58
	condicion  goto 32
	asignacion  goto 33
	sentenciaIF  goto 34
	sentenciaPRINT  goto 35
	sentenciaWHILE  goto 36


state 21
	asignacion : ID . ASIGN expAritmetica ';'  (74)
	asignacion : ID . ASIGN tipo '(' expAritmetica ')' ';'  (75)
	asignacion : ID . expAritmetica ';'  (77)
	asignacion : ID . ASIGN expAritmetica error  (78)
	listaVariables : ID .  (127)

	ID  shift 59
	CTE  shift 60
	ASIGN  shift 61
	'-'  shift 62
	';'  reduce 127
	','  reduce 127

	expAritmetica  goto 63
	termino  goto 64
	factor  goto 65
	llamadoFunc  goto 66


state 22
	bloqueTRYCATCH : TRY . sentEjecutables CATCH BEGIN sentSoloEjecutables END  (6)
	bloqueTRYCATCH : TRY . CATCH BEGIN sentSoloEjecutables END  (8)
	bloqueTRYCATCH : TRY . sentEjecutables BEGIN sentSoloEjecutables END  (9)
	bloqueTRYCATCH : TRY . sentEjecutables CATCH sentSoloEjecutables END  (10)
	bloqueTRYCATCH : TRY . sentEjecutables CATCH BEGIN sentSoloEjecutables error  (11)

	PRINT  shift 18
	WHILE  shift 19
	ID  shift 56
	CATCH  shift 67
	IF  shift 23
	ASIGN  shift 24
	'('  shift 25
	.  error

	sentEjecutables  goto 68
	condicion  goto 32
	asignacion  goto 33
	sentenciaIF  goto 34
	sentenciaPRINT  goto 35
	sentenciaWHILE  goto 36


state 23
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (79)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ENDIF ';'  (80)
	sentenciaIF : IF . THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (82)
	sentenciaIF : IF . condicion bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (83)
	sentenciaIF : IF . condicion THEN ELSE bloqueEjecutable ENDIF ';'  (84)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE ENDIF ';'  (85)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE bloqueEjecutable ';'  (86)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF error  (87)
	sentenciaIF : IF . THEN bloqueEjecutable ENDIF ';'  (88)
	sentenciaIF : IF . condicion bloqueEjecutable ENDIF ';'  (89)
	sentenciaIF : IF . condicion THEN ENDIF ';'  (90)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ';'  (91)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ENDIF error  (92)

	THEN  shift 69
	'('  shift 54
	.  error

	condicion  goto 70


state 24
	asignacion : ASIGN . expAritmetica ';'  (76)

	ID  shift 59
	CTE  shift 60
	'-'  shift 62
	.  error

	expAritmetica  goto 71
	termino  goto 64
	factor  goto 65
	llamadoFunc  goto 66


state 25
	sentenciaPRINT : '(' . CADENA ')' ';'  (94)
	condicion : '(' . comparaciones ')'  (106)

	LONG  shift 4
	SINGLE  shift 5
	CADENA  shift 72
	ID  shift 59
	CTE  shift 60
	IGUAL  shift 73
	DISTINTO  shift 74
	MAYORIG  shift 75
	MENORIG  shift 76
	'-'  shift 62
	'>'  shift 77
	'<'  shift 78
	.  error
